Fix spilling of user carousel.

--- a/PhotoPlusFrontend/PhotoPlus/src/app/components/admin-panel/subcomponents/delete-users/delete-users.component.scss
+++ b/PhotoPlusFrontend/PhotoPlus/src/app/components/admin-panel/subcomponents/delete-users/delete-users.component.scss
@@ -3,3 +3,7 @@
 .user{
   overflow: hidden;
 }
+
+.item-card{
+  max-width: 250px !important;
+}
